# mach-games

./: .gitignore
cpr_pilot/: README.md  pyproject.toml
cpr_pilot/configs/: default.yaml  default_1.yaml  seed_sweep.yaml
cpr_pilot/configs/ablations/: no_broadcast.yaml  no_private_message.yaml  symmetric_stakes.yaml
cpr_pilot/docs/: AUDIT.md
cpr_pilot/runs/S_20260503T024103Z_seed42/: decisions.jsonl  labels.jsonl  report.json  report.md  state.jsonl  transcript.jsonl
cpr_pilot/runs/S_20260503T025505Z_seed42/: decisions.jsonl  labels.jsonl  report.json  report.md  state.jsonl  transcript.jsonl
cpr_pilot/runs/S_20260503T034629Z_seed42/: decisions.jsonl  report.json  report.md  state.jsonl  transcript.jsonl
cpr_pilot/src/cpr_pilot/: __init__.py  captains.py  cli.py  config.py  dynamics.py  state.py
cpr_pilot/src/cpr_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cpr_pilot/src/cpr_pilot/game/: __init__.py  engine.py  routing.py
cpr_pilot/src/cpr_pilot/metrics/: __init__.py  base.py  contextual_lie_judge.py  paired_message_consistency.py  propose_commit_divergence.py  reasoning_action_divergence.py  report.py  sustainable_share.py
cpr_pilot/src/cpr_pilot/prompts/: __init__.py  builder.py
cpr_pilot/src/cpr_pilot/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
cpr_pilot/src/cpr_pilot/runner/: __init__.py  seed_sweep.py  single.py
cpr_pilot/tests/: test_config.py  test_dynamics.py  test_metrics.py  test_routing.py  test_zero_biomass_closure.py
(+21 files in other folders)
